<resources>
    <string name="app_name">Lavka</string>
    <string name="lavka">LAVKA</string>
    <string name="dobro">Добро пожаловать!</string>
    <string name="chto_vas">Что Вас интересует?</string>
    <string name="imageview">imageview</string>
    <string name="eda">Еда</string>
    <string name="prods">Продукты</string>
    <string name="narodniy">Народный</string>
    <string name="col">Кол-во</string>
    <string name="nazvanie">Название продукта</string>
    <string name="posle">После заполнения всех полей заявки, оператор свяжется с вами для уточнения ваших пожеланий. Ограничение по весу - 15 кг.</string>
    <string name="vnimanie">Внимание! Оплата производится по чеку из магазина Цена доставки 180 сом</string>
    <string name="vvedite">Введите название</string>
    <string name="kol">- 1 +</string>
    <string name="summa">Сумма</string>
    <string name="pocheku">По чеку из магазина</string>
    <string name="dostavka">Доставка</string>
    <string name="som">180 сом</string>
    <string name="zakaz">Заказать</string>
    <string name="imya">Имя</string>
    <string name="vonissa">Ванесса</string>
    <string name="number">Номер телефона</string>
    <string name="number1">0222778900</string>
    <string name="adress">Адрес доставки</string>
    <string name="mederova">Медерова 61а</string>
    <string name="dop">Дополнительная информация</string>
    <string name="oplata">Сопособы оплаты</string>
    <string name="bank">Банковская Карта</string>
    <string name="nal">Наличными</string>
    <string name="doplata">Доплата за район</string>
    <string name="sto">100,0 сом</string>
    <string name="utochnite">Уточните у оператора</string>
    <string name="privet">Привет, Ванесса!</string>
    <string name="we_see">Мы увидели ваш заказ</string>
    <string name="ochered">В очереди на обработку</string>
    <string name="podrobnee">Подробнее</string>
    <string name="zakazsozdan">Заказ создан 12.12.21 в 19:22</string>
    <string name="kartofel">Картофель</string>
    <string name="kg2">2 кг</string>
    <string name="milk">Молоко</string>
    <string name="itogo">ИТОГО:</string>
    <string name="_380">380 сом</string>
    <string name="_2">2 л</string>
    <string name="lavka22">Спасибо, что выбрали LAVKA!</string>
    <string name="europe">Европейская</string>
    <string name="kitai">Китайская</string>
    <string name="suhsi">Суши</string>
    <string name="pizza">pizza</string>
    <string name="desert">Десерт</string>
    <string name="philadelf">Филадельфия</string>
    <string name="sostav">Лосось, творожный сыр, огурец, рис</string>
    <string name="_250">250сом</string>
    <string name="oformit">Оформить заказ</string>
    <string name="_2sh">2 шт</string>
    <string name="fill">Филадельфия Люкс</string>
    <string name="cali">Калифорния</string>
    <string name="ugor">Суши угорь</string>
    <string name="rice">Рис, угорь, нори</string>
    <string name="_320">320 сом</string>
    <string name="_220">220 сом</string>
    <string name="_90">90 сом</string>
    <string name="_1">1 шт</string>
    <string name="bluda">Сумма блюд</string>
    <string name="posuda">Посуда</string>
    <string name="dostavka">Доставка</string>
    <string name="_360">360 сом</string>
    <string name="_0_0">0,0 сом</string>
    <string name="_160">160 сом</string>
    <string name="itog">Итого:</string>
    <string name="_520">520 сом</string>
</resources>